Use React for component rendering

--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -1,8 +1,8 @@
-<div class="panel-repositories">
+<div id="panel-repositories">
 </div>
 
-<div class="panel-issues">
+<div id="panel-issues">
 </div>
 
-<div class="panel-issue">
+<div id="panel-issue">
 </div>
