--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -8,12 +8,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/paper/bootstrap.min.css">
-    <style>
-      body {
-        min-height: 2000px;
-        padding-top: 70px;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
